# innfos-black-stone-software

./: README.md  parameter.db  robotserver
example/: CMakeLists.txt
example/src/advanced/: mode1.cpp  mode4.cpp
linux-arm/example/src/advanced/: mode2.cpp  mode3.cpp
linux-arm/example/src/basic/: mode0.cpp
linux-x86/example/: CMakeLists.txt
linux-x86/example/src/advanced/: mode1.cpp  mode2.cpp  mode3.cpp  mode4.cpp
linux-x86/sdk/include/: base.h  database.h  dynamics.h  execute.h  interface.h  interpolation.h  mechnical_unit.h
linux-x86/sdk/lib/: .fuse_hidden0000036500000006  .fuse_hidden0000036f00000008  .fuse_hidden000003af0000000c  .fuse_hidden000003b000000009  .fuse_hidden000003c300000008  .fuse_hidden000003ce00000002  .fuse_hidden000003d400000012  .fuse_hidden000004540000000c  .fuse_hidden000004e90000001c  .fuse_hidden000005450000001b  .fuse_hidden0000059900000024  .fuse_hidden000005e200000017
robot_sdk/include/: mechnical_unit.h
